Forçando atualização do projeto